# DigiviceRefactor

./: CMakeLists.txt  DigiviceRefactor1.code-workspace  DigiviceRefactorMenu.code-workspace  PHASE4_COMPLETION_REPORT.md  UI_FRAMEWORK_PHASE1_COMPLETE.md  ai_briefing_document.md  ai_copilot_briefing.md  batch_convert_sprites_mapped.py  convert_generic.py  debug_error.txt  debug_output_phase4_fixed.txt  latest_debug_output.txt  main.cpp  rebuild.ps1  run_debug.bat  test_paths_detailed.cpp  test_variant_detection.cpp  test_variant_paths.cpp  tree.txt
Documentation/: Refactoring_Ideas_Claude.md  copilot_context_briefing.md  event_selection_menu_ui_plan.md  map_system_prototype_progress.md
archive/documentation-2025-05-23/: battle_flow_design.md  battle_flow_detailed_design_v2.md  environment_asset_structure.md  event_selection_menu_ui_enhancements.md  map_node_data_implementation_plan.md  map_system_design_summary.md  map_system_detailed_design.md  map_system_state_and_event_menu_plan.md
archive/documentation-old/: map_system_prototype_progress.md
archive/memory-bank-2025-05-23/: architecture.md  current_technical_assessment.md  development_roadmap.md  hardware_button_implementation.md  hardware_button_schematic.md  hardware_reference.md  implementation_roadmap_new.md  menu_enhancement_plan.md  menu_implementation_analysis.md  menu_implementation_details.md  menu_navigation_system.md  menu_ui_design.md  next_implementation_tasks.md  progression_system_design.md  project_roadmap.md  technical_assessment.md  text_renderer_implementation_plan.md  text_renderer_notes.md  text_renderer_progress.md  text_rendering_approach.md  textrenderer_fix_implementation_plan.md
archive/memory-bank-old/: adventure_state_battle_flash_fix_explanation.md  design_documentation_summary.md  fix_action_plan.md  future_features.md  hardware_implementation_rp2350.md  menu_cursor_implementation.md  next_actions.md  technical_debt.md
assets/: Agumon_Happy_0.h  Agumon_Idle_0.h  Agumon_Idle_1.h  Agumon_Run_0.h  Biyomon_Happy_0.h  Biyomon_Idle_0.h  Gabumon_Attack_0.h  Gabumon_Happy_0.h  Gabumon_Idle_0.h  Gabumon_Idle_1.h  Gabumon_Rest_0.h  Gabumon_Run_1.h  Gatomon_Idle_0.h  Gatomon_Run_0.h  Gatomon_Walk_1.h  Gomamon_Attack_0.h  Gomamon_Idle_1.h  Gomamon_Turn_0.h  Gomamon_Walk_0.h  Palmon_Happy_0.h  Palmon_Idle_1.h  Palmon_Run_1.h  Palmon_Walk_1.h  Patamon_Idle_0.h  Patamon_Idle_1.h  TaiTest2_0.h  TaiTest_0.h  Tentomon_Happy_0.h  Tentomon_Idle_1.h  Tentomon_Run_0.h  Tentomon_Turn_0.h  Tentomon_Walk_0.h  bg_layer0_png.h  walk_frame_0.h  walk_frame_1.h
assets/sprites/: agumon.json  agumon_sheet.json  biyomon.json  gabumon_sheet.json  gatomon_sheet.json  palmon.json  patamon.json
build_new/: ALL_BUILD.vcxproj  CMakeCache.txt  DigiviceSim.sln  DigiviceSim.vcxproj  DigiviceSim.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
clean_build/: ALL_BUILD.vcxproj  CMakeCache.txt  DigiviceSim.sln  DigiviceSim.vcxproj  DigiviceSim.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
clean_build2/: ALL_BUILD.vcxproj  CMakeCache.txt  DigiviceSim.sln  DigiviceSim.vcxproj  DigiviceSim.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
config/: game_config.json
documentation/: AI_ASSISTANT_BRIEFING.md  ASSET_LOADING_ENHANCEMENT_SUMMARY.md  BACKGROUND_ASSET_MIGRATION_PLAN.md  FEATURES.md  MASTER_REFACTORING_PLAN.md  PROJECT_OVERVIEW.md  QUICK_START_IMPLEMENTATION.md  README.md  REFACTORING_PLAN_PHASE1.md  REFACTORING_PLAN_PHASE2.md  REFACTORING_PLAN_PHASE3.md  TECHNICAL_ARCHITECTURE.md  architecture.md
fresh_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  DigiviceSim.sln  DigiviceSim.vcxproj  DigiviceSim.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
include/: AdventureState.h  Game.h  GameState.h  animation.h  idisplay.h  pc_display.h
include/Core/: AnimationManager.h  AssetManager.h  BackgroundVariantManager.h  CombatantData.h  ErrorManager.h  FallbackTextureGenerator.h  FrameRateManager.h  Game.h  GameAction.h  GameConstants.h  GraphicsTypes.h  InputManager.h  MapData.h  PlayerData.h  gameconstants.h.new
include/Graphics/: AnimationData.h  AnimationDefinitions.h  Animator.h  GraphicsConstants.h  ManagedScrollingLayer.h  SeamlessBackgroundRenderer.h  animation.h
include/Platform/: idisplay.h
include/States/: AdventureState.h  AdventureState.h.new  BattleState.h  EnemyTestState.h  EnhancedMenuState.h  GameState.h  LegacyMenuState.h  MapSystemState.h  MenuState.h  PartnerSelectState.h  PlayerTestState.h  ProgressState.h  SettingsState.h  TransitionState.h
include/Utils/: AnimationUtils.h  ConfigManager.h  GameConstants.h  RenderUtils.h  ScalingUtils.h
include/entities/: Digimon.h  DigimonDefinition.h  DigimonRegistry.h
include/integration/: GameAssetManager.h
include/tools/: AssetValidator.h
include/ui/: BorderTransition.h  DigiviceScreen.h  MenuBar.h  MenuList.h  MenuSystemComparison.h  TextLayoutUtils.h  TextRenderer.h  UIElement.h
memory-bank/: asset_inventory.md  core_design_document.md  fix_implementation_plan.md  game_states.md  implementation_roadmap.md  next_development_steps.md  original_device_mechanics.md  project_context.md  project_status.md  revised_implementation_roadmap.md  text_renderer_assessment.md  text_renderer_fix_plan.md  vpet_battle_sequence.md
new_build/: ALL_BUILD.vcxproj  CMakeCache.txt  DigiviceSim.sln  DigiviceSim.vcxproj  DigiviceSim.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
src/: AdventureState.cpp  Game.cpp
src/Utils/: AnimationUtils.cpp  ConfigManager.cpp  ScalingUtils.cpp
src/core/: AnimationManager.cpp  AssetManager.cpp  BackgroundVariantManager.cpp  ErrorManager.cpp  FallbackTextureGenerator.cpp  FrameRateManager.cpp  Game.cpp  Game_fade.cpp  InputManager.cpp  InputManager_keybind.cpp  InputManager_rebind.cpp
src/entities/: DigimonDefinition.cpp  DigimonRegistry.cpp
src/graphics/: Animation.cpp  Animator.cpp  (+3 more)
tests/: configmanager_test.cpp
(+111 files in other folders)
